Fix identified off screen

--- a/src/styles/records/edit.scss
+++ b/src/styles/records/edit.scss
@@ -16,6 +16,9 @@
 }
 
 //MAIN
+ul.table-view.inputs {
+  margin-bottom: 80px; // to account the floating photo picker for scrolling
+}
 .inputs span.icon {
   color: $button-black;
 }
